--- a/_sass/classic/_formatting.scss
+++ b/_sass/classic/_formatting.scss
@@ -8,7 +8,7 @@ body {
 }
 
 // Formatting for the navbanner panel elements.
-.navbanner-panel {
+.navbanner-panel, .navbanner-panel-fixed {
 	
 	// Title formatting
 	.navbanner-title {
