--- a/_sass/classic/_layout.scss
+++ b/_sass/classic/_layout.scss
@@ -19,6 +19,13 @@
 	}
 }
 
+@mixin medium-and-wide-layout {
+	@media screen and (min-width: $medium-min-width) {
+		@content
+	}
+}
+
+
 // Layout top-to-bottom for the top level
 // This arranges the navbanner-panel, column-panel, footer-separator and footer-panel (from "default.html")
 .body-panel {
@@ -27,8 +34,9 @@
 	justify-content: flex-start;
 }
 
+
 // The navigation & banner
-// Note: these two have to be together to enable a RDW design with an input/label in the banner area.
+// Note: these two have to be together to enable a RWD design with an input/label in the banner area.
 .navbanner-panel {
 
 	// Use the flex layout rules.
@@ -277,6 +285,238 @@
 }
 
 
+// The fixed panel remains in place when scrolling. In this panel the medium and wide layout are identical and the menu in medium is always visible.
+// Wrap of the menu items is prevented because that would cause problems as it would cause overlap of the content of the column panel wit the second row of the menu.
+.navbanner-panel-fixed {
+	
+	// Fix the panel to the top of the screen
+	position: fixed;
+	top: 0;
+	width: 100%;
+	
+	// Use the flex layout rules.
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+	justify-content: flex-start;
+
+	// The size of the title depends on the width of the window.
+	.navbanner-title {
+	
+		// The title area should take up all space not used by the menu label.
+		flex-grow: 1;
+
+		// Center the title if visible
+		@if ($navbanner-include-banner == true) { display: flex; } @else { display: none }
+		justify-content: center;
+		align-items: center;
+	}
+
+	// The menu label is only visible in narrow and medium layout.
+	.navbanner-label {
+		
+		// Never grow the menu label (symbol)
+		flex-grow: 0;
+
+		// The menu label (symbol) should be centered if visible
+		@if ($navbanner-include-banner == true) { display: flex; } @else { display: none }
+		justify-content: center;
+		align-items: center;
+
+		// The label is used as checkbox-label, it should show a pointer when the mouse is above it.
+		label {
+			p:after { content: $menu-symbol-code; } // Set the menu symbol
+			cursor: pointer;
+		}
+	}
+
+	// The dividers should run accross the entire window. Note that they are not always visible, that depends on the active layout.
+	.nav-top-divider { width: 100%; }
+	.nav-bottom-divider { width: 100%; }
+	
+	// The menu is always the entire width.
+	.navbanner-menu { width: 100%; }
+	
+	@include narrow-layout {
+
+		// Override visibility of the label 
+		@if ($navbanner-include-banner == false) { .navbanner-label, .navbanner-title { display: flex; } }
+
+		// Disabled items.
+		.navbanner-menu, .nav-bottom-divider, input, .menu-item-separator { display: none; }
+		
+		// Conditionally visible/invisible items (conditionally on the invisible checkbox, i.e. menu symbol)
+		input:checked ~ {
+		
+			// Display the menu only when the menu-checkbox (invisible) is checked.
+			.navbanner-menu { display: block; }
+			
+			// Do not display the top divider when the menu is visible.
+			.nav-top-divider { display: none; }
+		}
+
+		// Only visible when the menu symbol invisible checkbox is selected
+		.navbanner-menu {
+		
+			// For the top level list (menu) items
+			li {
+
+				// Disable submenu by default
+				ul { display: none; }
+
+				// When the submenu is closed, show the appropriate symbol
+				label .menu-item .menu-item-symbol p:after { content: $menu-closed-submenu-code; }
+
+				// If the checkbox is checked
+				input:checked ~ {
+
+					// Show submenu
+					ul { display: block; }
+
+					// When the submenu is open, show the appropriate symbol
+					label .menu-item .menu-item-symbol p:after { content: $menu-open-submenu-code; }
+				}
+
+				// Ensure that the whole width and height of a link is clickable
+				a { display: block; }	
+			}
+
+			// Use the flex layout for the menu items
+			.menu-item, .menu-subitem {
+			
+				display: flex;
+				flex-direction: row;
+
+				// Align all items in the center
+				align-items: center;
+
+				// Fix the display property for the menu item symbol and title area's when a <p> is included
+				.menu-item-symbol { p { display: inline; } }
+		
+				// The symbol area does not grow
+				.menu-item-symbol, .menu-subitem-symbol { flex-grow: 0; width: 3 * $hspacing-unit; }
+
+				// The title area must grow
+				.menu-item-title, .menu-subitem-title { flex-grow: 1; }
+			}
+		}
+	}
+
+	@include medium-layout {
+
+		// Do not show the checkbox label, the input(s) and the menu symbols
+		.navbanner-label, input, .menu-item-symbol { display: none; }
+		
+		.navbanner-menu {
+		
+			// Use flex to enable alignment of the top level menu items
+			display: flex;
+			flex-direction: row;
+			flex-wrap: nowrap;
+			justify-content: $menu-alignment;
+
+			// Create a left and right spacing
+			border-left: ($navbar-side-margin - ($navbar-menu-item-spacing / 2)) solid transparent;
+			border-right: $navbar-side-margin solid transparent;
+			
+			// Menu item spacing
+			.menu-item {
+				border-left: ($navbar-menu-item-spacing / 2) solid transparent;
+				border-right: ($navbar-menu-item-spacing / 2) solid transparent;
+			}
+			.menu-item-separator p:after { content: $menu-item-separator; }
+
+			// This menu is horizontal, all list components should be inline
+			.menu-item, .menu-item-separator, .menu-item-title, menu-subitem-title {
+				display: inline;
+				p { display: inline; }
+			}
+
+			ul {
+				// Controls wrapping of the menu items.
+				white-space: $menu-item-wrap;
+				
+				li {
+					
+					// This menu is horizontal
+					display: inline-block;
+					
+					// The submenu display
+					ul {
+						display: none; // Initially disabled
+						position: absolute; // Display the submenu below the corresponding menu item
+						li { display: block; } // Makes the submenu vertical
+					}
+
+					// Display the submenu if the user hovers the mouse over it
+					&:hover ul { display: block; }
+
+					// Display the submenu if the user taps the corresponding menu item
+					input:checked ~ ul { display: block; }
+				}
+			}
+		}
+	}
+
+	@include wide-layout {
+
+		// Do not show the checkbox label, the input(s) and the menu symbols
+		.navbanner-label, input, .menu-item-symbol { display: none; }
+		
+		.navbanner-menu {
+		
+			// Use flex to enable alignment of the top level menu items
+			display: flex;
+			flex-direction: row;
+			flex-wrap: nowrap;
+			justify-content: $menu-alignment;
+
+			// Create a left and right spacing
+			border-left: ($navbar-side-margin - ($navbar-menu-item-spacing / 2)) solid transparent;
+			border-right: $navbar-side-margin solid transparent;
+			
+			// Menu item spacing
+			.menu-item {
+				border-left: ($navbar-menu-item-spacing / 2) solid transparent;
+				border-right: ($navbar-menu-item-spacing / 2) solid transparent;
+			}
+			.menu-item-separator p:after { content: $menu-item-separator; }
+
+			// This menu is horizontal
+			.menu-item, .menu-item-separator, .menu-item-title, menu-subitem-title {
+				display: inline;
+				p { display: inline; }
+			}
+
+			ul {
+				// Controls wrapping of the menu items.
+				white-space: $menu-item-wrap;
+
+				li {
+					
+					// This menu is horizontal
+					display: inline-block;
+					
+					// The submenu display
+					ul {
+						display: none; // Initially disabled
+						position: absolute; // Display the submenu below the corresponding menu item
+						li { display: block; } // Makes the submenu vertical
+					}
+
+					// Display the submenu if the user hovers the mouse over it
+					&:hover ul { display: block; }
+
+					// Display the submenu if the user taps the corresponding menu item
+					input:checked ~ ul { display: block; }
+				}
+			}
+		}
+	}
+
+}
+
+
 // The layout for the column panel uses flex, but lays out the columns either column or row based depending on the size of the window (screen).
 .column-panel {
 
@@ -296,6 +536,7 @@
 
 		// Unused		
 		.tertiary-column, .secondary-divider, .tertiary-divider { display: none; }
+		.secondary-column .vmenu { display: none }
 	}
 	
 	@include medium-layout {
@@ -311,6 +552,7 @@
 
 		// Unused
 		.tertiary-divider, .secondary-widget-divider, .tertiary-column { display: none; }
+		.primary-column .vmenu { display: none; }
 	}
 	
 	@include wide-layout {
@@ -327,5 +569,23 @@
 
 		// Unused
 		.secondary-column .tertiary-column-content, .tertiary-widget-divider, .secondary-widget-divider { display: none }
+		.primary-column .vmenu { display: none; }
+	}
+}
+
+
+// Add top margins for when the navbanner is fixed at the top of the screen. This prevents the content of the column panels from being placed behind the navbanner.
+.column-panel-fixed {
+	
+	@include narrow-layout {
+		margin-top: $narrow-banner-height + $narrow-menu-height;
+	}
+	
+	@include medium-layout {
+		margin-top: $medium-banner-height + $medium-menu-height;
+	}
+	
+	@include wide-layout {
+		margin-top: $wide-banner-height + $wide-menu-height;
 	}
 }
