--- a/_includes/navbanner.html
+++ b/_includes/navbanner.html
@@ -38,100 +38,104 @@
 		<!-- Page menus -->
 		{% for topTitle in topTitles %}
 		
-			<!-- Create a list of sub menu item titles -->
-			
-			{% comment %}<!-- note: the html comment tags are for editor coloring support
-			
-			Due to the poor support for variables in Liquid we have to resort to some fairly laborious code.
-			
-			First determine all pages that contain sub menu information for the running top menu item. These are collected in "titlePages"
-			
-			Then create four lists containing the sub menu title, index, url and link respectively. These lists are all in the same sequence such that entry [n] is applicable to the same sub menu in all lists. (I.e. they are synchronous)
-			
-			Then sort the lists into four new lists. Again these lists must be kept synchronous.
-			
-			Lastly, step through the lists to create the actual sub menu's
-			
-			-->{% endcomment %}
-			
-			{% assign titlePages = site.pages | where:'menuInclude', true | where:'menuTopTitle', topTitle %}
-			
-			{% assign subMenuTitles = "" | split: "" %}
-			{% assign subMenuIndexes = "" | split: "" %}
-			{% assign subMenuUrls = "" | split: "" %}
-			{% assign subMenuLinks = "" | split: "" %}
+			{% if site.data.setup.drop-down-menu %}
 
-			{% for ape in titlePages %}
-				{% if ape.menuSubTitle != nil %}
-					{% assign subMenuTitles = subMenuTitles | push: ape.menuSubTitle %}
-					{% if ape.menuSubIndex != nil %}
-						{% assign subMenuIndexes = subMenuIndexes | push: ape.menuSubIndex %}
-					{% else %}
-						{% assign subMenuIndexes = subMenuIndexes | push: -1 %}
-					{% endif %}
-					{% assign subMenuUrls = subMenuUrls | push: ape.url %}
-					{% if ape.menuLink != nil %}
-						{% assign subMenuLinks = subMenuLinks | push: ape.menuLink %}
-					{% else %}
-						{% assign subMenuLinks = subMenuLinks | push: true %}
-					{% endif %}
-				{% endif %}
-				{% if ape.menuSubs != nil %}
-					{% for sub in ape.menuSubs %}
-						{% assign subMenuTitles = subMenuTitles | push: sub.title %}
-						{% if sub.index != nil %}
-							{% assign subMenuIndexes = subMenuIndexes | push: sub.index %}
+				<!-- Create a list of sub menu item titles -->
+			
+				{% comment %}<!-- note: the html comment tags are for editor coloring support
+			
+				Due to the poor support for variables in Liquid we have to resort to some fairly laborious code.
+			
+				First determine all pages that contain sub menu information for the running top menu item. These are collected in "titlePages"
+			
+				Then create four lists containing the sub menu title, index, url and link respectively. These lists are all in the same sequence such that entry [n] is applicable to the same sub menu in all lists. (I.e. they are synchronous)
+			
+				Then sort the lists into four new lists. Again these lists must be kept synchronous.
+			
+				Lastly, step through the lists to create the actual sub menu's
+			
+				-->{% endcomment %}
+			
+				{% assign titlePages = site.pages | where:'menuInclude', true | where:'menuTopTitle', topTitle %}
+			
+				{% assign subMenuTitles = "" | split: "" %}
+				{% assign subMenuIndexes = "" | split: "" %}
+				{% assign subMenuUrls = "" | split: "" %}
+				{% assign subMenuLinks = "" | split: "" %}
+
+				{% for ape in titlePages %}
+					{% if ape.menuSubTitle != nil %}
+						{% assign subMenuTitles = subMenuTitles | push: ape.menuSubTitle %}
+						{% if ape.menuSubIndex != nil %}
+							{% assign subMenuIndexes = subMenuIndexes | push: ape.menuSubIndex %}
 						{% else %}
 							{% assign subMenuIndexes = subMenuIndexes | push: -1 %}
 						{% endif %}
-						{% if sub.url != nil %}
-							{% if sub.anchorId != nil %}
-								{% assign urlWithAnchorId = sub.url | append: '#' | append: sub.anchorId %}
-							{% else %}
-								{% assign urlWithAnchorId = sub.url %}
-							{% endif %}
-						{% else %}
-							{% if sub.anchorId != nil %}
-								{% assign urlWithAnchorId = ape.url | append: '#' | append: sub.anchorId %}
-							{% else %}
-								{% assign urlWithAnchorId = ape.url %}
-							{% endif %}
-						{% endif %}
-						{% assign subMenuUrls = subMenuUrls | push: urlWithAnchorId %}
-						{% if sub.link != nil %}
-							{% assign subMenuLinks = subMenuLinks | push: sub.link %}
+						{% assign subMenuUrls = subMenuUrls | push: ape.url %}
+						{% if ape.menuLink != nil %}
+							{% assign subMenuLinks = subMenuLinks | push: ape.menuLink %}
 						{% else %}
 							{% assign subMenuLinks = subMenuLinks | push: true %}
 						{% endif %}
-					{% endfor %}
-				{% endif %}
-			{% endfor %}
+					{% endif %}
+					{% if ape.menuSubs != nil %}
+						{% for sub in ape.menuSubs %}
+							{% assign subMenuTitles = subMenuTitles | push: sub.title %}
+							{% if sub.index != nil %}
+								{% assign subMenuIndexes = subMenuIndexes | push: sub.index %}
+							{% else %}
+								{% assign subMenuIndexes = subMenuIndexes | push: -1 %}
+							{% endif %}
+							{% if sub.url != nil %}
+								{% if sub.anchorId != nil %}
+									{% assign urlWithAnchorId = sub.url | append: '#' | append: sub.anchorId %}
+								{% else %}
+									{% assign urlWithAnchorId = sub.url %}
+								{% endif %}
+							{% else %}
+								{% if sub.anchorId != nil %}
+									{% assign urlWithAnchorId = ape.url | append: '#' | append: sub.anchorId %}
+								{% else %}
+									{% assign urlWithAnchorId = ape.url %}
+								{% endif %}
+							{% endif %}
+							{% assign subMenuUrls = subMenuUrls | push: urlWithAnchorId %}
+							{% if sub.link != nil %}
+								{% assign subMenuLinks = subMenuLinks | push: sub.link %}
+							{% else %}
+								{% assign subMenuLinks = subMenuLinks | push: true %}
+							{% endif %}
+						{% endfor %}
+					{% endif %}
+				{% endfor %}
 
-			{% assign sortedSubMenuTitles = "" | split: "" %}
-			{% assign sortedSubMenuIndexes = subMenuIndexes | sort %}
-			{% assign sortedSubMenuUrls = "" | split: "" %}
-			{% assign sortedSubMenuLinks = "" | split: "" %}
+				{% assign sortedSubMenuTitles = "" | split: "" %}
+				{% assign sortedSubMenuIndexes = subMenuIndexes | sort %}
+				{% assign sortedSubMenuUrls = "" | split: "" %}
+				{% assign sortedSubMenuLinks = "" | split: "" %}
 
-			{% for menuIndex in sortedSubMenuIndexes %}
-				{% if menuIndex != -1 %}
-					{% for aMenuIndex in subMenuIndexes %}
-						{% if aMenuIndex == menuIndex %}
-							{% assign sortedSubMenuTitles = sortedSubMenuTitles | push: subMenuTitles[forloop.index0] %}
-							{% assign sortedSubMenuUrls = sortedSubMenuUrls | push: subMenuUrls[forloop.index0] %}
-							{% assign sortedSubMenuLinks = sortedSubMenuLinks | push: subMenuLinks[forloop.index0] %}
-							{% continue %}
-						{% endif %}
-					{% endfor %}
-				{% endif %}
-			{% endfor %}
-			{% for aMenuIndex in subMenuIndexes %}
-				{% if aMenuIndex == -1 %}
-					{% assign sortedSubMenuTitles = sortedSubMenuTitles | push: subMenuTitles[forloop.index0] %}
-					{% assign sortedSubMenuUrls = sortedSubMenuUrls | push: subMenuUrls[forloop.index0] %}
-					{% assign sortedSubMenuLinks = sortedSubMenuLinks | push: subMenuLinks[forloop.index0] %}
-					{% continue %}
-				{% endif %}
-			{% endfor %}
+				{% for menuIndex in sortedSubMenuIndexes %}
+					{% if menuIndex != -1 %}
+						{% for aMenuIndex in subMenuIndexes %}
+							{% if aMenuIndex == menuIndex %}
+								{% assign sortedSubMenuTitles = sortedSubMenuTitles | push: subMenuTitles[forloop.index0] %}
+								{% assign sortedSubMenuUrls = sortedSubMenuUrls | push: subMenuUrls[forloop.index0] %}
+								{% assign sortedSubMenuLinks = sortedSubMenuLinks | push: subMenuLinks[forloop.index0] %}
+								{% continue %}
+							{% endif %}
+						{% endfor %}
+					{% endif %}
+				{% endfor %}
+				{% for aMenuIndex in subMenuIndexes %}
+					{% if aMenuIndex == -1 %}
+						{% assign sortedSubMenuTitles = sortedSubMenuTitles | push: subMenuTitles[forloop.index0] %}
+						{% assign sortedSubMenuUrls = sortedSubMenuUrls | push: subMenuUrls[forloop.index0] %}
+						{% assign sortedSubMenuLinks = sortedSubMenuLinks | push: subMenuLinks[forloop.index0] %}
+						{% continue %}
+					{% endif %}
+				{% endfor %}
+			
+			{% endif %}
 			
 			<li>
 
@@ -165,65 +169,76 @@
 						</div>
 					</div>
 				</label>
-				
-				<!-- Create sub menu items -->
-				{% if sortedSubMenuTitles.size > 0 %}
-					<ul>
-					{% for subTitle in sortedSubMenuTitles %}
-						{% if sortedSubMenuLinks[forloop.index0] != false %}
-						<li>
-							<div class="menu-subitem">
-								<div class="menu-subitem-symbol"></div>
-								<div class="menu-subitem-title">
-									<a href="{{ sortedSubMenuUrls[forloop.index0] }}"><p>{{ subTitle }}</p></a>
+			
+				{% if site.data.setup.drop-down-menu %}
+
+					<!-- Create sub menu items -->
+					{% if sortedSubMenuTitles.size > 0 %}
+						<ul>
+						{% for subTitle in sortedSubMenuTitles %}
+							{% if sortedSubMenuLinks[forloop.index0] != false %}
+							<li>
+								<div class="menu-subitem">
+									<div class="menu-subitem-symbol"></div>
+									<div class="menu-subitem-title">
+										<a href="{{ sortedSubMenuUrls[forloop.index0] }}"><p>{{ subTitle }}</p></a>
+									</div>
 								</div>
-							</div>
-						</li>
-						{% else %}
-						<li>
-							<div class="menu-subitem">
-								<div class="menu-subitem-symbol"></div>
-								<div class="menu-subitem-title"><p>{{ subTitle }}</p></div>
-							</div>
-						</li>
-						{% endif %}
-					{% endfor %}			
-					</ul>
+							</li>
+							{% else %}
+							<li>
+								<div class="menu-subitem">
+									<div class="menu-subitem-symbol"></div>
+									<div class="menu-subitem-title"><p>{{ subTitle }}</p></div>
+								</div>
+							</li>
+							{% endif %}
+						{% endfor %}			
+						</ul>
+					{% endif %}
+
 				{% endif %}
 			</li>
 		{% endfor %}
 
 		<!-- Categories menu -->
-		{% assign cats = site.pages | where:'layout', 'category-page' | sort:'title' %}
-		{% if cats.size > 0 %}
-			{% assign categories = 'Categories' %}
-			{% if site.data.text-for.tCategories %}{% assign categories = site.data.text-for.tCategories %}{% endif %}
-			<li>
-				<input type="checkbox" id="category-checkbox">
-				<label for="category-checkbox">
-					<div class="menu-item-separator"><p><!-- empty but necessary --></p></div>
-					<div class="menu-item">
-						<div class="menu-item-symbol">
-							<p><!-- empty but necessary! --></p>
-						</div>
-						<div class="menu-item-title">
-							<p>{{ categories }}</p>
-						</div>
-					</div>
-				</label>
-				<ul>
-				{% for cat in cats %}
-					<li>
-						<div class="menu-subitem">
-							<div class="menu-subitem-symbol"></div>
-							<div class="menu-subitem-title">
-								<a href="{{ cat.url }}"><p>{{ cat.title | capitalize }}</p></a>
+		{% if site.data.setup.generate-categories-menu %}
+			{% assign cats = site.pages | where:'layout', 'category-page' | sort:'title' %}
+			{% if cats.size > 0 %}
+				{% assign categories = 'Categories' %}
+				{% if site.data.text-for.tCategories %}{% assign categories = site.data.text-for.tCategories %}{% endif %}
+				<li>
+					<input type="checkbox" id="category-checkbox">
+					<label for="category-checkbox">
+						<div class="menu-item-separator"><p><!-- empty but necessary --></p></div>
+						<div class="menu-item">
+							<div class="menu-item-symbol">
+								<p><!-- empty but necessary! --></p>
+							</div>
+							<div class="menu-item-title">
+								<p>{{ categories }}</p>
 							</div>
 						</div>
-					</li>
-				{% endfor %}
-				</ul>
-			</li>
+					</label>
+					<ul>
+				
+					{% if site.data.setup.drop-down-menu %}
+
+						{% for cat in cats %}
+							<li>
+								<div class="menu-subitem">
+									<div class="menu-subitem-symbol"></div>
+									<div class="menu-subitem-title">
+										<a href="{{ cat.url }}"><p>{{ cat.title | capitalize }}</p></a>
+									</div>
+								</div>
+							</li>
+						{% endfor %}
+						</ul>
+				
+					{% endif %}
+				</li>
+			{% endif %}
 		{% endif %}
 	</ul>
 </nav>
