--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,25 +4,31 @@
 {% if page.tertiary-column %}{% if page.tertiary-column == 'present' %}{% assign tertiary-column = 'present' %}{% endif %}{% else %}{% if site.data.setup.tertiary-column == 'present' %}{% assign tertiary-column = 'present' %}{% endif %}{% endif %}
 {% if page.tertiary-column-content %}{% assign tertiary-column-content = page.tertiary-column-content %}{% else %}{% assign tertiary-column-content = 'tertiary-column.html' %}{% endif %}
 {% if page.navbanner-position %}{% assign navbanner-position = page.navbanner-position %}{% else %}{% assign navbanner-position = site.data.setup.navbanner-position %}{% endif %}
+{% if navbanner-position == 'top-fixed' %}{% assign navbanner-classes = 'navbanner-panel-fixed' %}{% assign column-panel-classes = 'column-panel column-panel-fixed' %}{% else %}{% assign navbanner-classes = 'navbanner-panel' %}{% assign column-panel-classes = 'column-panel' %}{% endif%}
 <html>
 
 	{% include head.html %}
 	
   	<body class="body-panel">
   	
-  		{% if navbanner-position == 'top' %}
-  			{% if site.data.setup.use-separate-navbanner %}
-  				<div id="navFrame" class="navbanner-panel"><script>$("#navFrame").load("/navbanner.html");</script></div>
+  		{% if navbanner-position == 'top' or navbanner-position == 'top-fixed' %}
+  			{% if site.data.setup.use-separate-navbanner and site.data.setup.drop-down-menu %}
+  				<div id="navFrame" class="{{ navbanner-classes }}"><script>$("#navFrame").load("/navbanner.html");</script></div>
   			{% else %}
-  				<div class="navbanner-panel">{% include navbanner.html %}</div>
+  				<div class="{{ navbanner-classes }}">{% include navbanner.html %}</div>
   			{% endif %}
   		{% endif %}
 
-		<div class="column-panel">
+		<div class="{{ column-panel-classes }}">
 
 			{% if secondary-column == 'left' %}
 			<div class="secondary-column">
-				<div class="secondary-column-content">{% include {{ secondary-column-content }} %}</div>
+				<div class="secondary-column-content">
+					{% if site.data.setup.drop-down-menu %}{% else %}
+						{% include vertical-menu.html label-modifier="a" %}
+					{% endif %}
+					{% include {{ secondary-column-content }} label-modifier="a" %}
+				</div>
 				{% if tertiary-column == 'present' %}	
 					<div class="tertiary-column-content">{% include {{ tertiary-column-content }} %}</div>
 				{% endif %}
@@ -46,6 +52,9 @@
   						<div class="navbanner-panel">{% include navbanner.html %}</div>
   					{% endif %}
   				{% endif %}
+  				{% if site.data.setup.drop-down-menu %}{% else %}
+  					{% include vertical-menu.html label-modifier="b" %}
+  				{% endif %}
 				<main>{{ content }}</main>
 			</div>
 			
@@ -53,7 +62,12 @@
 			{% if secondary-column == 'right' %}
 			<div class="secondary-divider"></div>			
 			<div class="secondary-column">
-				<div class="secondary-column-content">{% include {{ secondary-column-content }} %}</div>
+				<div class="secondary-column-content">
+					{% if site.data.setup.drop-down-menu %}{% else %}
+						{% include vertical-menu.html label-modifier="c" %}
+					{% endif %}
+					{% include {{ secondary-column-content }} label-modifier="b" %}
+				</div>
 				{% if tertiary-column == 'present' %}	
 					<div class="tertiary-column-content">{% include {{ tertiary-column-content }} %}</div>
 				{% endif %}
